--- a/Foodlens/backend/.env.example
+++ b/Foodlens/backend/.env.example
@@ -1,13 +1,14 @@
-# FoodLens Backend Environment Variables Template
+# FoodLens Backend Environment Configuration
 # Copy this file to .env and update with your actual values
 
-# Flask Configuration
-FLASK_APP=app.py
-FLASK_ENV=development
-FLASK_DEBUG=True
-SECRET_KEY=your-secret-key-here
+# Database Configuration
+DATABASE_URL=postgresql://username:password@localhost:5432/foodlens
 
-# Database Configuration (PostgreSQL)
+# Security Configuration (Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))")
+SECRET_KEY=your-secret-key-here-generate-with-secrets.token_urlsafe(32)
+
+# Token Configuration
+TOKEN_EXPIRES_IN=86400
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=foodlens_db
