--- a/Foodlens/frontend/package.json
+++ b/Foodlens/frontend/package.json
@@ -8,33 +8,35 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.1",
+    "axios": "^1.6.0",
+    "classnames": "^2.3.2",
+    "framer-motion": "^10.16.16",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
+    "react-camera-pro": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.6.0",
-    "react-camera-pro": "^1.4.0",
-    "react-webcam": "^7.1.1",
-    "react-dropzone": "^14.2.3",
-    "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.294.0",
-    "classnames": "^2.3.2",
-    "js-cookie": "^3.0.5",
-    "react-helmet": "^6.1.0",
-    "react-intersection-observer": "^9.5.3",
-    "framer-motion": "^10.16.16"
+    "react-webcam": "^7.1.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/react-helmet": "^6.1.11",
     "autoprefixer": "^10.4.16",
+    "customize-cra": "^1.0.0",
     "postcss": "^8.4.32",
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.3.6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix"
